images path fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         I'm a Software Developer with a passion for creating innovative solutions and building efficient applications.Here you'll learn about my jouney as a software developer.
                     </div>
                     <div class="btn">
-                        <a href="/Assets/Kunal_Rathore.pdf" target="_blank">
+                        <a href="Assets/Kunal_Rathore.pdf" target="_blank">
                             <span class="circle">
                                 <i class="fa fa-download"></i>
                             </span>
@@ -47,22 +47,22 @@
                  </div>
                  <div class="main-section-right">
                     <div class="absolute icons icon-dots">
-                        <img src="/Assets/UserAsset/dots.png" alt="dots">
+                        <img src="Assets/UserAsset/dots.png" alt="dots">
                     </div>
                     <div class="absolute icons icon-cube">
-                        <img src="/Assets/UserAsset/cube.png" alt="cube">
+                        <img src="Assets/UserAsset/cube.png" alt="cube">
                     </div>
                     <div class="absolute icons icon-circle">
-                        <img src="/Assets/UserAsset/circle.png" alt="circle">
+                        <img src="Assets/UserAsset/circle.png" alt="circle">
                     </div>
                     <div class="absolute icons icon-zigzag">
-                        <img src="/Assets/UserAsset/zigzags.png" alt="zigzag">
+                        <img src="Assets/UserAsset/zigzags.png" alt="zigzag">
                     </div>
                     <div class="absolute icons icon-plus">
-                        <img src="/Assets/UserAsset/plus.png" alt="plus">
+                        <img src="Assets/UserAsset/plus.png" alt="plus">
                     </div>
                     <div class="user-image">
-                        <img src="/Assets/UserAsset/profile.jpg" alt="profile">
+                        <img src="Assets/UserAsset/profile.jpg" alt="profile">
                     </div>
     
                  </div>
