Project/Skills section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo-container">
-                    <img src="/Assets/UserAsset/logo.jpg" alt="logo" class="logo">
+                    <img src="Assets/UserAsset/logo.jpg" alt="logo" class="logo">
                     <div class="logo-text">unal Rathore</div>
                 </div>
 
@@ -21,12 +21,16 @@
                     <div><a href="#experience">Experience</a></div>
                     <div><a href="#contact">Contact</a></div>
                 </div>
+
+                <button class="nav-btn" id="navBtn">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
             </div>
             <div class="main">
                 <!-- Main content goes here -->
                  <div class="faded-text">Kunal Rathore</div>
                  <div class="main-section-left">
-                    <div class="main-section-heading">Hii! Kunal Rathore</div>
+                    <div class="main-section-heading">Bonjour!</div>
                     <div class="main-section-heading main-section-subheading">
                         I am a <span class="role"></span>
                     </div>
@@ -68,13 +72,113 @@
                  </div>
             </div>
         </div>
+        <div class="project-section" id="projects">
+            <h2 class="page-header">Projects</h2>
+            <div class="project-container">
+                <div class="project-card">
+                    <div class="project-content">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="/Assets/Stack/HTML.png"  alt="">
+                            <img class="project-skill" src="/Assets/Stack/CSS.png" alt="">
+                            <img class="project-skill" src="/Assets/Stack/Javascript.svg" alt="">
+                            <img class="project-skill" src="/Assets/Stack/NodeJs.svg" alt="">
+                            <img class="project-skill" src="/Assets/Stack/Express.png" alt="">
+                            <img class="project-skill" src="/Assets/Stack/MongoDB.svg" alt="">
+                                 
+                        </div>
+                        <div class="project-heading">Full Stack Notes App</div>
+                        <div class="project-desc">This is a Full Stack Notes App made to create and manage your notes from anywhere </div>
+                        <div class="btn-grp">
+                            <a href="">
+                                <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                                <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" id="project-card-two">
+                    <div class="project-content">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="/Assets/Stack/HTML.png"  alt="">
+                            <img class="project-skill" src="/Assets/Stack/CSS.png" alt="">
+                            <img class="project-skill" src="/Assets/Stack/Javascript.svg" alt="">
+                            <img class="project-skill" src="/Assets/Stack/NodeJs.svg" alt="">
+                            <img class="project-skill" src="/Assets/Stack/Express.png" alt="">
+                            <img class="project-skill" src="/Assets/Stack/MongoDB.svg" alt="">
+                        </div>
+                        <div class="project-heading">Daily Quotes</div>
+                        <div class="project-desc">Daily Quotes is a full stack app where the random quotes is display.It has a feature where user can sign up for recieving daily quotes on their mail at 8 A.M. IST </div>
+                        <div class="btn-grp">
+                            <a href="">
+                                <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                                <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" id="project-card-three">
+                    <div class="project-content">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="/Assets/Stack/Javascript.svg" alt="">
+                            <img class="project-skill" src="/Assets/Stack/NodeJs.svg" alt="">
+                            <img class="project-skill" src="/Assets/Stack/Express.png" alt="">
+                            <img class="project-skill" src="/Assets/Stack/MongoDB.svg" alt="">
+                        </div>
+                        <div class="project-heading">Role Based Event Management</div>
+                        <div class="project-desc">Role Based Event Management is a backend project where the user, admin and organizer can manage events based on their roles.</div>
+                        <div class="btn-grp">
+                            <a href="">
+                                <i title="GitHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="skills-container" id="skills">
+                <div class="skills-text">Skills</div>
+                <div class="skills-container-left">
+                    <h2 class="skills-title">
+                        <span class="caps">M</span>e and 
+                        <br/>
+                        MyTech Stack
+                    </h2>
+                    <div class="skills-desc">
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis eaque animi maiores deleniti minus provident iste beatae, enim aliquam neque.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magnam deserunt voluptas dolore amet asperiores, quos exercitationem ratione cupiditate ducimus!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti expedita harum aperiam quia voluptatum doloribus iste itaque maxime, repellat nihil.
+                        </p>
+                    </div>
+                </div>
 
+                <div class="skills-container-right">
+                        <img src="/Assets/UserAsset/blob vector.png" alt="blob" class="blob-logo"/>
+                        <img src="/Assets/Stack/HTML.png" alt="html"class="skills-logo"/>
+                        <img src="/Assets/Stack/CSS.png" alt="css"class="skills-logo"/>
+                        <img src="/Assets/Stack/Javascript.svg" alt="js"class="skills-logo"/>
+                        <img src="/Assets/Stack/NodeJs.svg" alt="node"class="skills-logo"/>
+                        <img src="/Assets/Stack/Express.png" alt="express"class="skills-logo"/>
+                        <img src="/Assets/Stack/React.png" alt="Typescript"class="skills-logo"/>
+                        <img src="/Assets/Stack/MongoDB.svg" alt="mongodb"class="skills-logo"/>
+                        <img src="/Assets/Stack/Git.svg" alt="Typescript"class="skills-logo"/>
+                        <img src="/Assets/Stack/Github.svg" alt="github"class="skills-logo"/>
+                        <img src="/Assets/Stack/Tailwind.png" alt="tailwind"class="skills-logo"/>
+                        <img src="/Assets/Stack/Typescript.svg" alt="Typescript"class="skills-logo"/>
+                        <img src="/Assets/Stack/Bootstrap.svg" alt="Typescript"class="skills-logo"/>
+                        <img src="/Assets/Stack/Vercel.svg" alt="Typescript"class="skills-logo"/>
+                </div>
+            </div>
+        </div>
     </div>
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
@@ -91,6 +195,21 @@
         backSpeed: 80,
         backDelay: 1000,
     });
+
+        // Mobile Navigation Toggle
+        const navBtn = document.getElementById('navBtn');
+        const navItems = document.querySelector('.nav-items');
+
+        navBtn.addEventListener('click', function() {
+            navItems.classList.toggle('active');
+        });
+
+        // Close menu when a nav item is clicked
+        document.querySelectorAll('.nav-items div a').forEach(link => {
+            link.addEventListener('click', function() {
+                navItems.classList.remove('active');
+            });
+        });
   </script>
 
 </body>
