images fix for github pages

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                 <div class="project-card">
                     <div class="project-content">
                         <div class="project-skills-container">
-                            <img class="project-skill" src="/Assets/Stack/HTML.png"  alt="">
-                            <img class="project-skill" src="/Assets/Stack/CSS.png" alt="">
-                            <img class="project-skill" src="/Assets/Stack/Javascript.svg" alt="">
-                            <img class="project-skill" src="/Assets/Stack/NodeJs.svg" alt="">
-                            <img class="project-skill" src="/Assets/Stack/Express.png" alt="">
-                            <img class="project-skill" src="/Assets/Stack/MongoDB.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/HTML.png"  alt="">
+                            <img class="project-skill" src="Assets/Stack/CSS.png" alt="">
+                            <img class="project-skill" src="Assets/Stack/Javascript.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/NodeJs.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/Express.png" alt="">
+                            <img class="project-skill" src="Assets/Stack/MongoDB.svg" alt="">
                                  
                         </div>
                         <div class="project-heading">Full Stack Notes App</div>
@@ -101,12 +101,12 @@
                 <div class="project-card" id="project-card-two">
                     <div class="project-content">
                         <div class="project-skills-container">
-                            <img class="project-skill" src="/Assets/Stack/HTML.png"  alt="">
-                            <img class="project-skill" src="/Assets/Stack/CSS.png" alt="">
-                            <img class="project-skill" src="/Assets/Stack/Javascript.svg" alt="">
-                            <img class="project-skill" src="/Assets/Stack/NodeJs.svg" alt="">
-                            <img class="project-skill" src="/Assets/Stack/Express.png" alt="">
-                            <img class="project-skill" src="/Assets/Stack/MongoDB.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/HTML.png"  alt="">
+                            <img class="project-skill" src="Assets/Stack/CSS.png" alt="">
+                            <img class="project-skill" src="Assets/Stack/Javascript.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/NodeJs.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/Express.png" alt="">
+                            <img class="project-skill" src="Assets/Stack/MongoDB.svg" alt="">
                         </div>
                         <div class="project-heading">Daily Quotes</div>
                         <div class="project-desc">Daily Quotes is a full stack app where the random quotes is display.It has a feature where user can sign up for recieving daily quotes on their mail at 8 A.M. IST </div>
@@ -123,10 +123,10 @@
                 <div class="project-card" id="project-card-three">
                     <div class="project-content">
                         <div class="project-skills-container">
-                            <img class="project-skill" src="/Assets/Stack/Javascript.svg" alt="">
-                            <img class="project-skill" src="/Assets/Stack/NodeJs.svg" alt="">
-                            <img class="project-skill" src="/Assets/Stack/Express.png" alt="">
-                            <img class="project-skill" src="/Assets/Stack/MongoDB.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/Javascript.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/NodeJs.svg" alt="">
+                            <img class="project-skill" src="Assets/Stack/Express.png" alt="">
+                            <img class="project-skill" src="Assets/Stack/MongoDB.svg" alt="">
                         </div>
                         <div class="project-heading">Role Based Event Management</div>
                         <div class="project-desc">Role Based Event Management is a backend project where the user, admin and organizer can manage events based on their roles.</div>
@@ -161,20 +161,20 @@
                 </div>
 
                 <div class="skills-container-right">
-                        <img src="/Assets/UserAsset/blob vector.png" alt="blob" class="blob-logo"/>
-                        <img src="/Assets/Stack/HTML.png" alt="html"class="skills-logo"/>
-                        <img src="/Assets/Stack/CSS.png" alt="css"class="skills-logo"/>
-                        <img src="/Assets/Stack/Javascript.svg" alt="js"class="skills-logo"/>
-                        <img src="/Assets/Stack/NodeJs.svg" alt="node"class="skills-logo"/>
-                        <img src="/Assets/Stack/Express.png" alt="express"class="skills-logo"/>
-                        <img src="/Assets/Stack/React.png" alt="Typescript"class="skills-logo"/>
-                        <img src="/Assets/Stack/MongoDB.svg" alt="mongodb"class="skills-logo"/>
-                        <img src="/Assets/Stack/Git.svg" alt="Typescript"class="skills-logo"/>
-                        <img src="/Assets/Stack/Github.svg" alt="github"class="skills-logo"/>
-                        <img src="/Assets/Stack/Tailwind.png" alt="tailwind"class="skills-logo"/>
-                        <img src="/Assets/Stack/Typescript.svg" alt="Typescript"class="skills-logo"/>
-                        <img src="/Assets/Stack/Bootstrap.svg" alt="Typescript"class="skills-logo"/>
-                        <img src="/Assets/Stack/Vercel.svg" alt="Typescript"class="skills-logo"/>
+                        <img src="Assets/UserAsset/blob vector.png" alt="blob" class="blob-logo"/>
+                        <img src="Assets/Stack/HTML.png" alt="html"class="skills-logo"/>
+                        <img src="Assets/Stack/CSS.png" alt="css"class="skills-logo"/>
+                        <img src="Assets/Stack/Javascript.svg" alt="js"class="skills-logo"/>
+                        <img src="Assets/Stack/NodeJs.svg" alt="node"class="skills-logo"/>
+                        <img src="Assets/Stack/Express.png" alt="express"class="skills-logo"/>
+                        <img src="Assets/Stack/React.png" alt="Typescript"class="skills-logo"/>
+                        <img src="Assets/Stack/MongoDB.svg" alt="mongodb"class="skills-logo"/>
+                        <img src="Assets/Stack/Git.svg" alt="Typescript"class="skills-logo"/>
+                        <img src="Assets/Stack/Github.svg" alt="github"class="skills-logo"/>
+                        <img src="Assets/Stack/Tailwind.png" alt="tailwind"class="skills-logo"/>
+                        <img src="Assets/Stack/Typescript.svg" alt="Typescript"class="skills-logo"/>
+                        <img src="Assets/Stack/Bootstrap.svg" alt="Typescript"class="skills-logo"/>
+                        <img src="Assets/Stack/Vercel.svg" alt="Typescript"class="skills-logo"/>
                 </div>
             </div>
         </div>
