hamburger icon + projects icon fix

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kunal Rathore</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div id="wrapper">
@@ -40,7 +41,7 @@
                     <div class="btn">
                         <a href="Assets/Kunal_Rathore.pdf" target="_blank">
                             <span class="circle">
-                                <i class="fa fa-download"></i>
+                                <i class="fa-solid fa-download"></i>
                             </span>
 
                             <span class="btn-title">Download CV</span>
@@ -177,11 +178,13 @@
                         <img src="Assets/Stack/Vercel.svg" alt="Typescript"class="skills-logo"/>
                 </div>
             </div>
+            <div class="stats">
+                
+            </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
     <script>
         var typeData = new Typed(".role", {
         strings: [
